--- a/foundations/03-grouping-selectors/style.css
+++ b/foundations/03-grouping-selectors/style.css
@@ -1,9 +1,9 @@
-#elem1 {
+#bckgrd-text {
     background-color: black;
     color: white;
 }
 
-#elem2 {
+#bckgrd {
     background-color: yellow;
 }
 
